objects/PricebookEntry.object
<CustomObject>
    <fields>
        <fullName>CN_Apex_Update_DateTime__c</fullName>
        <description>Use this field to avoid validation rule when update record by apex class.</description>
        <label>Apex Update DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CN_Discount_Price__c</fullName>
        <label>Discount Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Is_Need_To_Sync__c</fullName>
        <formula>IF( CN_Sync_Time__c != NULL &amp;&amp;  CN_Last_List_Price_Change_Time__c = NULL, FALSE, CN_Last_List_Price_Change_Time__c  &gt; CN_Sync_Time__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Need To Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Last_List_Price_Change_Time__c</fullName>
        <label>Last List Price Change Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CN_Max_Discount_Price__c</fullName>
        <label>Max Discount Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Minimum_Price__c</fullName>
        <label>Minimum Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Price_Book_Code__c</fullName>
        <formula>Pricebook2.CN_Price_Book_Code__c</formula>
        <label>Price Book Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Price_Book_Entry_Code__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Formate: Price Book Code + Product Code</inlineHelpText>
        <label>Price Book Entry Code</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CN_Pricing_Unit__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Pricing Unit</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Product_Code__c</fullName>
        <formula>Product2.CN_SKU_Code__c</formula>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Product_Name__c</fullName>
        <formula>Product2.CN_SKU_Description_CN__c</formula>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Promo_Price_P1__c</fullName>
        <label>Promo Price P1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Promo_Price_P2__c</fullName>
        <label>Promo Price P2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Promo_Price_P3__c</fullName>
        <label>Promo Price P3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Sync_Error_Message__c</fullName>
        <label>Sync Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Sync_Status__c</fullName>
        <label>Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Proccessing</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Sync_Time__c</fullName>
        <label>Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CN_Unit_of_Measure__c</fullName>
        <label>UoM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CAR</fullName>
                </value>
                <value>
                    <fullName>EA</fullName>
                </value>
                <value>
                    <fullName>KG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <validationRules>
        <fullName>CN_CHECK_PRICE_BOOK_ENTRY_CODE</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  NOT(OR(
    CN_Price_Book_Entry_Code__c = (CN_Price_Book_Code__c +  Product2.CN_SKU_Code__c),
    CN_Price_Book_Entry_Code__c = (&apos;LP&apos; +  Product2.CN_SKU_Code__c)
  ))
)</errorConditionFormula>
        <errorDisplayField>CN_Price_Book_Entry_Code__c</errorDisplayField>
        <errorMessage>Price book entry code is incorrect!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_PBE_Channel_Check_Discount</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
NOT(Pricebook2.IsStandard),
  CN_Discount_Price__c = 0 ||  ISBLANK(CN_Discount_Price__c ) ||
   CN_Max_Discount_Price__c = 0 || ISBLANK(CN_Max_Discount_Price__c ) 
)</errorConditionFormula>
        <errorMessage>Please input Discount Price and Max Discount Price.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_PBE_Standard_Check_UoM</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(OR(
   ISCHANGED(CN_Apex_Update_DateTime__c),
  AND( ISNEW() , NOT( ISNULL(CN_Apex_Update_DateTime__c)))
)),
NOT( ISCHANGED( CN_Apex_Update_DateTime__c ) ),
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
Pricebook2.IsStandard,
ISPICKVAL(CN_Unit_of_Measure__c  , &quot;&quot;) ||  CN_Pricing_Unit__c = 0 ||  ISBLANK(CN_Pricing_Unit__c )
)</errorConditionFormula>
        <errorMessage>Please input Unit of Measure and Pricing Unit for Standard Price Book.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Prevent_Edit_List_Price</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  NOT($Permission.CN_Marketing_Update_List_Price),
  ISCHANGED( UnitPrice )
)</errorConditionFormula>
        <errorDisplayField>UnitPrice</errorDisplayField>
        <errorMessage>You are not allowed to change the list price</errorMessage>
    </validationRules>
</CustomObject>